[gd_scene load_steps=4 format=3 uid="uid://busq18c7xwsfi"]

[ext_resource type="PackedScene" uid="uid://dg3ikms7niw6" path="res://Scenes/SettingsPage/collapsible_setting_base.tscn" id="1_nqbxc"]
[ext_resource type="Script" path="res://Scenes/SettingsPage/Scripts/shake_volume_setting.gd" id="2_gski2"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="3_q8ur6"]

[node name="ShakeVolumeSetting" instance=ExtResource("1_nqbxc")]
script = ExtResource("2_gski2")

[node name="SettingName" parent="TopLevelContainer/TitleBarContainer/CollapseExpandButton" index="1"]
text = "Shake Volume"

[node name="CollapsibleContainer" parent="TopLevelContainer" index="1"]
visible = false

[node name="ShakeVolumeSlider" type="HSlider" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_q8ur6")
value = 100.0

[connection signal="value_changed" from="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ShakeVolumeSlider" to="." method="_on_shake_volume_slider_value_changed"]
